--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Kanel SOENG
 
 # Short bio or description (displayed in the header)
-description: R&D | AI | Science | Self-Improvement
+description: Human heart, AI speed
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/skanel/skanel.github.io/master/images/kanel.jpg
