--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,9 @@ baseurl: ""
 
 permalink: /:title/
 
+# Allow posts with future dates to be published
+future: true
+
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
